force-app/main/default/objects/Lobby_Config__mdt/Lobby_Config__mdt.object-meta.xml
<CustomObject>
    <label>Lobby Config</label>
    <pluralLabel>Lobby Configs</pluralLabel>
</CustomObject>