force-app/main/default/objects/Lobby_Config__mdt/fields/Appointment_Fields__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Fields__c</fullName>
    <label>Appointment Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>