force-app/main/default/objects/Lobby_Config__mdt/fields/Check_In_Method__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Method__c</fullName>
    <label>Check In Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom LWC</fullName>
                <default>true</default>
                <label>Custom LWC</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>