force-app/main/default/objects/Lobby_Config__mdt/fields/Current_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Current_Statuses__c</fullName>
    <label>Current (Being Served) Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>