force-app/main/default/objects/Lobby_Config__mdt/fields/Enable_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Enable_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Metrics</label>
    <type>Checkbox</type>
</CustomField>