force-app/main/default/objects/Lobby_Config__mdt/fields/Max_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Max_Appointments__c</fullName>
    <label>Max Appointments Shown</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>