force-app/main/default/objects/Lobby_Config__mdt/fields/Metric_1_KPI__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_KPI__c</fullName>
    <label>Metric 1 KPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>