force-app/main/default/objects/Lobby_Config__mdt/fields/Metric_2_Display__c.field-meta.xml
<CustomField>
    <fullName>Metric_2_Display__c</fullName>
    <label>Metric 2 Display Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>