force-app/main/default/objects/Lobby_Config__mdt/fields/Metric_3_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Metric_3_Ranges__c</fullName>
    <label>Metric 3 Color Ranges (JSON)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>