force-app/main/default/objects/Lobby_Config__mdt/fields/Metrics_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Border_Color__c</fullName>
    <label>Metrics Top Border Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>