force-app/main/default/objects/Lobby_Config__mdt/fields/Missed_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Missed_Statuses__c</fullName>
    <label>Missed / No-Show Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>