force-app/main/default/objects/Lobby_Config__mdt/fields/Past_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Past_Statuses__c</fullName>
    <label>Past (Completed) Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>