force-app/main/default/objects/Lobby_Config__mdt/fields/Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Interval__c</fullName>
    <label>Refresh Interval (seconds)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>