force-app/main/default/objects/Lobby_Config__mdt/fields/SA_Custom_Actions__c.field-meta.xml
<CustomField>
    <fullName>SA_Custom_Actions__c</fullName>
    <label>SA Custom Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>