force-app/main/default/objects/Lobby_Config__mdt/fields/SA_Hidden_Default_Actions__c.field-meta.xml
<CustomField>
    <fullName>SA_Hidden_Default_Actions__c</fullName>
    <label>SA Hidden Default Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>