force-app/main/default/objects/Lobby_Config__mdt/fields/Show_Metrics_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Show_Metrics_By_Default__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Metrics By Default</label>
    <type>Checkbox</type>
</CustomField>