force-app/main/default/objects/Lobby_Config__mdt/fields/Target_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Lookup_Field__c</fullName>
    <label>Target Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>