force-app/main/default/objects/Lobby_Config__mdt/fields/Upcoming_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Statuses__c</fullName>
    <label>Upcoming (Scheduled) Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>