force-app/main/default/objects/Lobby_Config__mdt/fields/Use_Custom_Status_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Status_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Status Mapping</label>
    <type>Checkbox</type>
</CustomField>