force-app/main/default/objects/Lobby_Config__mdt/fields/Waitlist_Checkin_Flow__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Checkin_Flow__c</fullName>
    <label>Waitlist Check-In Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>