force-app/main/default/objects/Lobby_Config__mdt/fields/Waitlist_Fields__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Fields__c</fullName>
    <label>Waitlist Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>