force-app/main/default/objects/Lobby_Config__mdt/fields/Walk_In_New_Contact_Label__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_New_Contact_Label__c</fullName>
    <label>New Contact Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>