force-app/main/default/objects/Lobby_Config__mdt/fields/WL_Custom_Actions__c.field-meta.xml
<CustomField>
    <fullName>WL_Custom_Actions__c</fullName>
    <label>WL Custom Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>