force-app/main/default/objects/Lobby_Config__mdt/fields/WL_Hidden_Default_Actions__c.field-meta.xml
<CustomField>
    <fullName>WL_Hidden_Default_Actions__c</fullName>
    <label>WL Hidden Default Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>