force-app/main/default/objects/Lobby_Config__mdt/fields/WL_Target_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>WL_Target_Lookup_Field__c</fullName>
    <label>WL Target Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>